--- a/random.html
+++ b/random.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
    <head>
+   <style>
+   body {
+        background-color: lightblue;
+		}
+ h1.monospace {
+    font-family: "Courier New"
+</style>
    </head>
 
    <body>
