--- a/random.html
+++ b/random.html
@@ -3,24 +3,31 @@
    <head>
    <style>
    body {
-        background-color: lightblue;
+    background-image: url("concert.jpg"), url("light.jpg");
+  background-repeat: no-repeat, repeat;
+	background-color: rgb(225, 225, 225); 
 		}
  h1.monospace {
-    font-family: "Courier New"
+    font-family: "Courier New" 
+	          }
 </style>
    </head>
 
    <body>
-   
+  
+  
    <h1>~Sofi Anahi~</h1>
-   
+  
    <br>
    
    <p>I like art</p>
    
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/izXfwPLZ8hw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+   
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/NMdTd9e-LEI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      
    <br>
    
-   <img src="blank.jpg" alt="idk" height="300" width="300">
 
    </body>
 
